refactor: remove the @Service spring dependencies in use cases classes