@@ -1,12 +1,11 @@
 package com.networkMapping.installationLocation.application.useCases;
 
 import com.networkMapping.installationLocation.application.dtos.UpdateAreaDto;
-import com.networkMapping.installationLocation.domain.Area;
 import com.networkMapping.installationLocation.application.repositories.AreaRepository;
+import com.networkMapping.installationLocation.domain.Area;
 import com.networkMapping.shared.exceptions.NotFoundEntityException;
-import org.springframework.stereotype.Service;
 
-@Service
+
 public class UpdateAreaUseCase {
     private final AreaRepository areaRepository;
 
@@ -17,8 +16,9 @@ public class UpdateAreaUseCase {
     public Area execute(UpdateAreaDto updateAreaDto) {
         var area = areaRepository.findById(updateAreaDto.id())
             .orElseThrow(() ->
-                new NotFoundEntityException(String.format("the area with id: %s does not exists", updateAreaDto.id())
-                ));
+                new NotFoundEntityException("the area with id: %s does not exists".formatted(updateAreaDto.id())
+                )
+            );
 
         area.setName(updateAreaDto.name());
         areaRepository.save(area);
